--- a/CrossPlatformLibrary.Messaging.NuGet/Package.nuspec
+++ b/CrossPlatformLibrary.Messaging.NuGet/Package.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>CrossPlatformLibrary.Messaging</id>
-    <version>1.0.9</version>
+    <version>2.0.0-pre</version>
     <title>CrossPlatformLibrary.Messaging</title>
     <authors>Thomas Galliker</authors>
     <licenseUrl>http://opensource.org/licenses/Apache-2.0</licenseUrl>
@@ -16,6 +16,9 @@
       windows phone winphone wp8 wpa81 win81 windowsphone android xamarin.forms xamarin.ios ios monoandroid monodroid monotouch mvvmcross mvvmlight
     </tags>
     <releaseNotes >
+      2.0.0-pre
+      - Refactoring to bait-and-switch pattern
+      
       1.0.9
       - Stable release for Xamarin.Android, iOS, Windows Phone 8, 8.1 and Windows Store 8.1
     </releaseNotes>
@@ -23,51 +26,46 @@
     <language>en-US</language>
     <dependencies>
       <group>
-        <dependency id="CrossPlatformLibrary" version="1.0.73" />
+        <dependency id="CrossPlatformLibrary" version="[1.9.99, 2.0.0)" />
         <dependency id="Guards" version="1.0.11" />
       </group>
     </dependencies>
   </metadata>
   <files>
     <!--PCL-->
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\portable-net45+wp8+wpa81+win81+netcore45+monoandroid10+monotouch10+xamarin.ios10\CrossPlatformLibrary.Messaging.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\portable-net45+wp8+wpa81+win81+netcore45+monoandroid10+monotouch10+xamarin.ios10\CrossPlatformLibrary.Messaging.xml" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\portable-net45+dnxcore50+wp80+wpa81+win81+netcore45+monoandroid10+monotouch10+xamarin.ios10\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.pdb" target="lib\portable-net45+dnxcore50+wp80+wpa81+win81+netcore45+monoandroid10+monotouch10+xamarin.ios10\CrossPlatformLibrary.Messaging.pdb" />
+    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\portable-net45+dnxcore50+wp80+wpa81+win81+netcore45+monoandroid10+monotouch10+xamarin.ios10\CrossPlatformLibrary.Messaging.xml" />
 
     <!--Xamarin.Android-->
-    <file src="..\CrossPlatformLibrary.Messaging.Android\bin\Release\CrossPlatformLibrary.Messaging.Platform.dll" target="lib\monoandroid10\CrossPlatformLibrary.Messaging.Platform.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging.Android\bin\Release\CrossPlatformLibrary.Messaging.Platform.xml" target="lib\monoandroid10\CrossPlatformLibrary.Messaging.Platform.xml" />
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\monoandroid10\CrossPlatformLibrary.Messaging.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\monoandroid10\CrossPlatformLibrary.Messaging.xml" />
+    <file src="..\CrossPlatformLibrary.Messaging.Android\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\monoandroid10\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging.Android\bin\Release\CrossPlatformLibrary.Messaging.pdb" target="lib\monoandroid10\CrossPlatformLibrary.Messaging.pdb" />
+    <file src="..\CrossPlatformLibrary.Messaging.Android\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\monoandroid10\CrossPlatformLibrary.Messaging.xml" />
 
     <!--Xamarin.iOS Classic API-->
-    <file src="..\CrossPlatformLibrary.Messaging.iOS\bin\iPhone\Release\CrossPlatformLibrary.Messaging.Platform.dll" target="lib\monotouch10\CrossPlatformLibrary.Messaging.Platform.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging.iOS\bin\iPhone\Release\CrossPlatformLibrary.Messaging.Platform.xml" target="lib\monotouch10\CrossPlatformLibrary.Messaging.Platform.xml" />
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\monotouch10\CrossPlatformLibrary.Messaging.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\monotouch10\CrossPlatformLibrary.Messaging.xml" />
+    <file src="..\CrossPlatformLibrary.Messaging.iOS\bin\iPhone\Release\CrossPlatformLibrary.Messaging.dll" target="lib\monotouch10\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging.iOS\bin\iPhone\Release\CrossPlatformLibrary.Messaging.pdb" target="lib\monotouch10\CrossPlatformLibrary.Messaging.pdb" />
+    <file src="..\CrossPlatformLibrary.Messaging.iOS\bin\iPhone\Release\CrossPlatformLibrary.Messaging.xml" target="lib\monotouch10\CrossPlatformLibrary.Messaging.xml" />
 
     <!--Xamarin.iOS Unified API-->
-    <file src="..\CrossPlatformLibrary.Messaging.iOSUnified\bin\iPhone\Release\CrossPlatformLibrary.Messaging.Platform.dll" target="lib\xamarin.ios10\CrossPlatformLibrary.Messaging.Platform.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging.iOSUnified\bin\iPhone\Release\CrossPlatformLibrary.Messaging.Platform.xml" target="lib\xamarin.ios10\CrossPlatformLibrary.Messaging.Platform.xml" />
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\xamarin.ios10\CrossPlatformLibrary.Messaging.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\xamarin.ios10\CrossPlatformLibrary.Messaging.xml" />
+    <file src="..\CrossPlatformLibrary.Messaging.iOSUnified\bin\iPhone\Release\CrossPlatformLibrary.Messaging.dll" target="lib\xamarin.ios10\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging.iOSUnified\bin\iPhone\Release\CrossPlatformLibrary.Messaging.pdb" target="lib\xamarin.ios10\CrossPlatformLibrary.Messaging.pdb" />
+    <file src="..\CrossPlatformLibrary.Messaging.iOSUnified\bin\iPhone\Release\CrossPlatformLibrary.Messaging.xml" target="lib\xamarin.ios10\CrossPlatformLibrary.Messaging.xml" />
 
     <!--Windows Phone 8-->
-    <file src="..\CrossPlatformLibrary.Messaging.WindowsPhone8\Bin\Release\CrossPlatformLibrary.Messaging.Platform.dll" target="lib\wp8\CrossPlatformLibrary.Messaging.Platform.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging.WindowsPhone8\Bin\Release\CrossPlatformLibrary.Messaging.Platform.xml" target="lib\wp8\CrossPlatformLibrary.Messaging.Platform.xml" />
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\wp8\CrossPlatformLibrary.Messaging.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\wp8\CrossPlatformLibrary.Messaging.xml" />
+    <file src="..\CrossPlatformLibrary.Messaging.WindowsPhone8\Bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\wp8\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging.WindowsPhone8\Bin\Release\CrossPlatformLibrary.Messaging.pdb" target="lib\wp8\CrossPlatformLibrary.Messaging.pdb" />
+    <file src="..\CrossPlatformLibrary.Messaging.WindowsPhone8\Bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\wp8\CrossPlatformLibrary.Messaging.xml" />
 
     <!--Windows Phone 8.1-->
-    <!--<file src="..\CrossPlatformLibrary.Messaging.WindowsPhone81\Bin\Release\CrossPlatformLibrary.Messaging.Platform.dll" target="lib\wpa81\CrossPlatformLibrary.Messaging.Platform.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging.WindowsPhone81\Bin\Release\CrossPlatformLibrary.Messaging.Platform.xml" target="lib\wpa81\CrossPlatformLibrary.Messaging.Platform.xml" />
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\wpa81\CrossPlatformLibrary.Messaging.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\wpa81\CrossPlatformLibrary.Messaging.xml" />-->
+    <file src="..\CrossPlatformLibrary.Messaging.WindowsPhone81\Bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\wpa81\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging.WindowsPhone81\Bin\Release\CrossPlatformLibrary.Messaging.pdb" target="lib\wpa81\CrossPlatformLibrary.Messaging.pdb" />
+    <file src="..\CrossPlatformLibrary.Messaging.WindowsPhone81\Bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\wpa81\CrossPlatformLibrary.Messaging.xml" />
 
     <!--Windows Store-->
-    <!--<file src="..\CrossPlatformLibrary.Messaging.WindowsStore\Bin\Release\CrossPlatformLibrary.Messaging.Platform.dll" target="lib\win81\CrossPlatformLibrary.Messaging.Platform.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging.WindowsStore\Bin\Release\CrossPlatformLibrary.Messaging.Platform.xml" target="lib\win81\CrossPlatformLibrary.Messaging.Platform.xml" />
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\win81\CrossPlatformLibrary.Messaging.dll" />
-    <file src="..\CrossPlatformLibrary.Messaging\bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\win81\CrossPlatformLibrary.Messaging.xml" />-->
+    <file src="..\CrossPlatformLibrary.Messaging.WindowsStore\Bin\Release\CrossPlatformLibrary.Messaging.dll" target="lib\win81\CrossPlatformLibrary.Messaging.dll" />
+    <file src="..\CrossPlatformLibrary.Messaging.WindowsStore\Bin\Release\CrossPlatformLibrary.Messaging.pdb" target="lib\win81\CrossPlatformLibrary.Messaging.pdb" />
+    <file src="..\CrossPlatformLibrary.Messaging.WindowsStore\Bin\Release\CrossPlatformLibrary.Messaging.xml" target="lib\win81\CrossPlatformLibrary.Messaging.xml" />
 
     <file src="tools\init.ps1" target="tools\init.ps1" />
     <file src="tools\install.ps1" target="tools\install.ps1" />
